// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateBridges > target agents snapshot 1`] = `
"# AGENTS.md — hAIve context

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target aider snapshot 1`] = `
"# CONVENTIONS.md — hAIve context (Aider)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target claude snapshot 1`] = `
"# CLAUDE.md — hAIve context

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target cline snapshot 1`] = `
"# hAIve rules (Cline)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target cody snapshot 1`] = `
"# hAIve rules (Cody / Sourcegraph)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target continue snapshot 1`] = `
"# hAIve rules (Continue)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target copilot snapshot 1`] = `
"# hAIve rules (GitHub Copilot)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target cursor snapshot 1`] = `
"---
description: hAIve shared memories & block sensors (auto-generated)
alwaysApply: true
---
# hAIve rules (Cursor)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target gemini snapshot 1`] = `
"# GEMINI.md — hAIve context

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target roo snapshot 1`] = `
"# hAIve rules (Roo Code)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target windsurf snapshot 1`] = `
"# hAIve rules (Windsurf)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;

exports[`generateBridges > target zed snapshot 1`] = `
"# hAIve rules (Zed)

<!-- haive:bridge-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are only a small breadcrumb map.
Keep default context small; pull deeper memories, code maps, or docs only when the task needs them.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are top breadcrumbs + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` with \`budget_preset:"quick"\` and \`format:"actions"\`
   (task + files/symbols). Treat its \`breadcrumbs\` as the first map, not as a full manual.
2. **Drill down only if needed**: use \`mem_get\` for a surfaced memory, \`code_map\` for exact symbols,
   \`code_search\` for semantic code lookup, or \`mem_relevant_to\` once project context is already loaded.
3. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
4. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
5. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top breadcrumbs only — call get_briefing / mem_get for deeper context. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->

<!-- haive:bridge-end -->
"
`;
